Add support for trait binding