@@ -5,11 +5,13 @@ import static com.flipkart.krystal.krystex.kryon.KryonExecutor.KryonExecStrategy
 
 import com.flipkart.krystal.annos.ExternalInvocation;
 import com.flipkart.krystal.concurrent.SingleThreadExecutor;
+import com.flipkart.krystal.krystex.dependencydecoration.DependencyDecoratorConfig;
 import com.flipkart.krystal.krystex.kryon.KryonExecutor.GraphTraversalStrategy;
 import com.flipkart.krystal.krystex.kryon.KryonExecutor.KryonExecStrategy;
 import com.flipkart.krystal.krystex.kryondecoration.KryonDecoratorConfig;
 import com.flipkart.krystal.krystex.logicdecoration.LogicDecorationOrdering;
 import com.flipkart.krystal.krystex.logicdecoration.OutputLogicDecoratorConfig;
+import com.flipkart.krystal.traits.TraitBindingProvider;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import java.util.List;
@@ -17,6 +19,7 @@ import java.util.Map;
 import lombok.Builder;
 import lombok.NonNull;
 import lombok.Singular;
+import org.checkerframework.checker.nullness.qual.Nullable;
 
 /**
  * This is used to configure a particular execution of the Krystal graph.
@@ -28,9 +31,10 @@ import lombok.Singular;
  * @param kryonExecStrategy Currently on BATCH is supported. More might be added in future
  * @param graphTraversalStrategy DEPTH is more performant and memory efficient. BREADTH is sometimes
  *     useful for debugging
- * @param requestScopedKryonDecoratorConfigs The request scoped kryon decorators to be applied
+ * @param kryonDecoratorConfigs The request scoped kryon decorators to be applied
  * @param singleThreadExecutor MANDATORY! This is used as the event loop for the message passing
  *     within this execution.
+ * @param traitBindingProvider used to determine the conformant vajrams bound to traits
  * @param debug If true, more human readable names are give to entities - might be memory
  *     ineffecient.
  * @param _riskyOpenAllKryonsForExternalInvocation DO NOT SET THIS TO TRUE IN PRODUCTION CODE - ELSE
@@ -44,7 +48,8 @@ public record KryonExecutorConfig(
     ImmutableSet<DependantChain> disabledDependantChains,
     KryonExecStrategy kryonExecStrategy,
     GraphTraversalStrategy graphTraversalStrategy,
-    @Singular Map<String, KryonDecoratorConfig> requestScopedKryonDecoratorConfigs,
+    @Singular Map<String, KryonDecoratorConfig> kryonDecoratorConfigs,
+    @Singular ImmutableMap<String, DependencyDecoratorConfig> dependencyDecoratorConfigs,
     @NonNull SingleThreadExecutor singleThreadExecutor,
     boolean debug,
     /******* Risky Flags ********/
@@ -58,8 +63,11 @@ public record KryonExecutorConfig(
     if (graphTraversalStrategy == null) {
       graphTraversalStrategy = DEPTH;
     }
-    if (requestScopedKryonDecoratorConfigs == null) {
-      requestScopedKryonDecoratorConfigs = Map.of();
+    if (kryonDecoratorConfigs == null) {
+      kryonDecoratorConfigs = ImmutableMap.of();
+    }
+    if (dependencyDecoratorConfigs == null) {
+      dependencyDecoratorConfigs = ImmutableMap.of();
     }
     if (disabledDependantChains == null) {
       disabledDependantChains = ImmutableSet.of();
